--- a/Pulumi.test.yaml
+++ b/Pulumi.test.yaml
@@ -1,5 +1,5 @@
 config:
   akamai:dnsSection: dns
   pulumi-dns:file_name: mx-test.csv
-  pulumi-dns:filename: zones.csv
+  pulumi-dns:filename: dns-zones.csv
   pulumi-dns:group_name: GSS Training Internal-C-1IE2OHM
