ignore TLS errors

--- a/Pulumi.test.yaml
+++ b/Pulumi.test.yaml
@@ -1,4 +1,6 @@
 config:
   akamai:dnsSection: dns
-  pulumi-dns:filename: zones.csv
   pulumi-dns:group_name: GSS Training Internal-C-1IE2OHM
+  pulumi-dns:zones:
+  - bookonline.nl
+  - hogeboomtravel.com
